--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div class="carousel-item">
             <div class="row">
               <div class="col-md-6">
-                <h1 class="video_text">Video games</h1>
+                <h1 class="Wellcome_text">Wellcome</h1>
                 <h1 class="controller_text">controller</h1>
                 <p class="banner_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable</p>
                 <div class="shop_bt"><a href="#">Shop Now</a></div>
